--- a/development/portfolio/skills.css
+++ b/development/portfolio/skills.css
@@ -1,7 +1,7 @@
 .content-div-skills {
     display: block;
     width: 76%;
-    height: 75%;
+    height: 72.8%;
     position: absolute;
     left: 23%;
     opacity: 0;
